syntax = "proto3";
package soarchain.did;

option go_package = "github.com/amirh39/soarchain-core/x/did/types";

import "gogoproto/gogo.proto";


message ChallengerDid {
  string id = 1;
  string pubKey = 2;
  string address = 3;
  string created = 4;
  string updated = 5;
}
